package ex44;

public class Item {
    public Products[] products;
    public int CurrentIndex = -1;
}
