package ex44;

import java.util.List;

public class Products {
    public String name;
    public double price;
    public int quantity;
}